examples/test/testpolicy13232.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13232
  namespace: namespace312
spec:
  podSelector:
    matchLabels:
      key19: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value7
      podSelector:
        matchLabels:
          key29: value49
          key26: value19
          key12: value2
